examples/test/testpolicy5702.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5702
  namespace: namespace133
spec:
  podSelector:
    matchLabels:
      key11: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value47
          key34: value2
      podSelector:
        matchLabels:
          key31: value27
          key24: value35
